Fix pdba width on small screens

--- a/_sass/index/main/layout.scss
+++ b/_sass/index/main/layout.scss
@@ -20,4 +20,9 @@ main {
 .project-list {
 	display: flex;
 	justify-content: center;
+	overflow-x: auto;
+
+	.project {
+		flex-shrink: 0;
+	}
 }
